src/test/ui/issues/issue-1962.stderr
error: denote infinite loops with `loop { ... }`
  --> $DIR/issue-1962.rs:4:3
   |
LL |   while true  {
   |   ^^^^^^^^^^ If I were you, I would simply use `loop`
   |
   = note: requested on the command line with `-D while-true`

error: aborting due to previous error

